[package]
name = "nwn_nasher_types"
version = "0.3.1"
license = "MIT"
description = "A library to parse and de/serialize the files from the nwn community tool, nasher"
readme = "README.md"
homepage = "https://github.com/urothis/rs_nwn_nasher_types"
repository = "https://github.com/urothis/rs_nwn_nasher_types"
keywords = ["library", "nwn", "nwnee", "json", "nasher"]
categories = ["game-development"]
edition = "2021"
authors = ["Urothis#4019"]
exclude = [
  "assets"
]
build = "build.rs"

[dependencies]
rust_decimal = { version = "1.29", features = ["serde-float"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
termdiff = "3.1.2"
test-each = { git = "https://github.com/remkop22/test-each" }

[build-dependencies]
git2 = "0.17.1"
